--- a/gb/22/3/11/n13639480.md
+++ b/gb/22/3/11/n13639480.md
@@ -1,37 +1,40 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cltpzk3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cltpzk3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cltpzk3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cltpzk3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cltpzk3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cltpzk3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中俄联手反西方制裁？专家揭中共挺俄内幕</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/03/id13638831-000_324W9R6-600x400.jpg" />
-<h6>2022年3月11日，救援人员正在第聂伯罗的空袭现场工作。乌克兰表示，当地的非军事目标遭到俄罗斯攻击，造成至少一人死亡，这似乎是该市第一次直接遭受攻击。 (State Emergency Service of Ukraine / AFP)
+<h6>2022年3月11日，救援人员正在第聂伯罗的空袭现场工作。乌克兰表示，当地的非军事目标遭到俄罗斯攻击，造成至少一人死亡，这似乎是该市第一次直接遭受攻击。(State Emergency Service of Ukraine/AFP)
 </h6>
 <hr>
 	<p>【大纪元2022年03月11日讯】（大纪元记者骆亚、程静采访报导）自俄罗斯入侵乌克兰，中共的暧昧态度就备受关注。近日有专家揭露，中共在大力支持俄罗斯，其真实意图，就是通过共产极权主义扩张全球，逐步取代美国，颠覆现有国际秩序。</p>
 <h2>西方制裁俄反制裁 美：北京附和俄罗斯的阴谋论</h2>
-<p><ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E4%BF%84%E4%B9%8C.md#1">俄乌</a>战争已经进入第三周，俄罗斯挺进缓慢。乌克兰官方说，俄军死亡1.2万人及3名高级将领。美国则说，俄军死亡超6000人。还有消息说，原以为入侵乌克兰“速战速决”的<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E6%99%AE%E4%BA%AC.md#1">普京</a>“非常愤怒”，开除了8名将军。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%84%E4%B9%8C.md#1">俄乌</a>战争已经进入第三周，俄罗斯挺进缓慢。乌克兰官方说，俄军死亡1.2万人及3名高级将领。美国官员则说，俄军死亡超6000人。泰晤士报导，原以为入侵乌克兰“速战速决”的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%99%AE%E4%BA%AC.md#1">普京</a>“越来越愤怒”，大约开除了8名将领。</p>
+<p><strong>听新闻：</strong></p>
+<div style="width: 100%; height: 200px; margin-bottom: 20px; border-radius: 6px; overflow: hidden;"><a style="width: 100%; height: 200px;" src="https://player.captivate.fm/episode/53b662f3-9605-4da0-a273-3802d53a9cad" width="300" b="150" frameborder="no" scrolling="no" seamless=""></a></div>
+<p><strong>（听更多请至<ahref="https://github.com/eizauy3553/djy/blob/master/gb/podcast.md#1">“听纪元”</a>平台）</strong></p>
 <p>西方世界仍然在加大对俄罗斯的制裁。周五（11日），美国总统拜登宣布将与G7及欧盟一起，取消对俄罗斯的“最惠国待遇”，并将增加从俄进口商品关税。此前，拜登还宣布禁止从俄罗斯进口石油、天然气和煤炭。</p>
-<p>自<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E4%BF%84%E4%B9%8C.md#1">俄乌</a>冲突爆发以来，西方国家在金融、贸易、科技、文化等领域对俄罗斯实施了制裁。据耶鲁大学管理学院的追踪数据，各领域中已有超过330家外企退出俄国市场，</p>
-<p>俄罗斯也发起反制裁，<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E6%99%AE%E4%BA%AC.md#1">普京</a>说，拟没收外企资产为“国有”。周四（10日），俄总理米舒斯京称，已准备了近20份的反制裁法案。</p>
-<p>而中共外交部多次表示“坚决反对任何非法单边制裁”。<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>和俄罗斯总统普京在战前曾高调宣布，<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E4%B8%AD%E4%BF%84.md#1">中俄</a>两国的战略合作“没有上限”，还签下1175亿美元的能源大单。战后中共又取消了对俄罗斯小麦进口贸易的限制。</p>
+<p>自<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%84%E4%B9%8C.md#1">俄乌</a>冲突爆发以来，西方国家在金融、贸易、科技、文化等领域对俄罗斯实施了制裁。据耶鲁大学管理学院的追踪数据，各领域中已有超过330家外企退出俄国市场，</p>
+<p>俄罗斯也发起反制裁，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%99%AE%E4%BA%AC.md#1">普京</a>说，拟没收外企资产为“国有”。周四（10日），俄总理米舒斯京称，已准备了近20份的反制裁法案。</p>
+<p>而中共外交部多次表示“坚决反对任何非法单边制裁”。<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>和俄罗斯总统普京在战前曾高调宣布，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E4%BF%84.md#1">中俄</a>两国的战略合作“没有上限”，还签下1175亿美元的能源大单。战后中共又取消了对俄罗斯小麦进口贸易的限制。</p>
 <p>中国已经是俄罗斯最大的出口目的地。据中共海关总署数据，双边贸易不仅总量大，去年达到1470亿美元，占俄罗斯贸易18%；而且增长快，去年增长率36%。</p>
 <p>自俄罗斯入侵乌克兰，中共外交部发言人几次三番拒绝回应“入侵”回避“谴责”，也不愿劝阻俄罗斯停战，反而多次把矛头指向美国。中共媒体也是煽动反西方情绪，贬低乌克兰挺俄罗斯。</p>
 <p>近日就在俄罗斯指美国资助乌克兰开发生物武器研究后，中共外交部赵立坚跟着说，美国在乌克兰有26个生物实验室进行“生物军事活动”，遭到美国政府的驳斥。</p>
 <p>美国国务院发言人普赖斯指出，北京在附和俄罗斯的阴谋论，并说“这些手段是俄罗斯用来为进一步对乌克兰展开有预谋的、无端和无理攻击寻找理由的明显伎俩。”</p>
-<h2>中共被曝全力支援俄罗斯 传满洲里送货忙</h2>
-<p>对于中共在俄乌战争中的角色，旅澳大陆自由派法学家<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E8%A2%81%E7%BA%A2%E5%86%B0.md#1">袁红冰</a>认为，“ 中共正在全力支持俄罗斯”。他说，<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E4%B8%AD%E4%BF%84.md#1">中俄</a>两方都在互相支持。</p>
-<p><ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E8%A2%81%E7%BA%A2%E5%86%B0.md#1">袁红冰</a>透露，从中共内部传出信息，现在连俄罗斯的一些口粮都是中共给的，军队物资是临时紧急调拨的。俄罗斯已经被西方逼到与北京一起，成为战略上“不封顶”的关系。</p>
+<h2>中共被曝全力支援俄罗斯 传送货忙</h2>
+<p>对于中共在俄乌战争中的角色，旅澳大陆自由派法学家<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A2%81%E7%BA%A2%E5%86%B0.md#1">袁红冰</a>认为，“中共正在全力支持俄罗斯”。他说，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E4%BF%84.md#1">中俄</a>两方都在互相支持。</p>
+<p><ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A2%81%E7%BA%A2%E5%86%B0.md#1">袁红冰</a>透露，从中共内部传出信息，现在连俄罗斯的一些口粮都是中共给的，军队物资是临时紧急调拨的。俄罗斯已经被西方逼到与北京一起，成为战略上“不封顶”的关系。</p>
 <p>他说，俄罗斯前线的那些部队很多都与中国厂商有联系，中国国内给俄罗斯制造军需品，各种军粮，俄罗斯军粮最近相当一部分是在中国东北地区制作的。</p>
 <p>如果俄罗斯外汇体系遭到国际制裁，袁红冰说，卢布跟人民币会更密切合作，到了最后，以物换物都有可能。为了避免美国找到借口，他会以物换物。</p>
 <p>袁红冰表示，因为俄罗斯需要中国的各种轻工业产品，而中共也需要俄罗斯的能源、粮食，“中共紧急给俄罗斯调集了大批的制成品，俄罗斯有的是粮食，关键是运不出来，粮食生的你怎么吃啊。”</p>
 <div class="vJOb1e aIfcHf Hw13jc">
 <div class="iRPxbe">
-<div class="GI74Re nDgy9d">前首都师范大学副教授李元华也对大纪元说，“满洲里那边已经忙得不得了，中国有大量物资运到俄罗斯，二十四小时都是这种状态，实际上中共是在暗中支持俄罗斯，希望俄罗斯站到自由世界对立面。”</div>
+<div class="GI74Re nDgy9d">前首都师范大学副教授李元华也对大纪元说，“满洲里那边已经忙得不得了，中国有大量物资运到俄罗斯，实际上中共是在暗中支持俄罗斯，希望俄罗斯站到自由世界对立面。”</div>
 </div>
 </div>
 <p>“他不敢真正地去堂而皇之的跟西方作对，所以就摆出这么一个姿势，暗地里支持俄罗斯，给俄罗斯输送物品。”他说。</p>
 <h2>袁红冰分析中共挺俄的真实意图</h2>
 <p>至于中共为何要力挺俄罗斯？袁红冰表示，“中共的真实意图，就是通过共产极权主义全球扩张，成为国际法的立法者、国际秩序的确定者，取代美国的国际警察的地位。”</p>
-<p>“<ahref="https://github.com/cltpzk3307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>曾在中共内部明确说，要以共产主义文化为核心价值构建人类命运共同体，取代美国和其它西方国家强加给这个世界的国际秩序。”</p>
+<p>“<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>曾在中共内部明确说，要以共产主义文化为核心价值构建人类命运共同体，取代美国和其它西方国家强加给这个世界的国际秩序。”</p>
 <p>这就是习近平的总体的国家战略目标，袁红冰说，他现在所做的一切都是围绕着这个国家战略目标来进行的。“而且他们有一个基本判断，就是东升西降，中共暴政正在不断的崛起，而美国在衰落的趋势。”</p>
 <p>袁红冰表示，“对于拜登政府，他们完全看不起的。习近平最亲近的智囊之一李书磊，在中国内部的一个高层讨论会上就讲，拜登就是一个宁愿在病床上老死，也不敢在沙场上战死的这么一个人。”</p>
 <p>“北京认为拜登正在提供第二次的发展机遇。这就是中共为什么要跟普京搞在一起，因为普京这次直接跟西方对着干了。”</p>
@@ -48,11 +51,11 @@
 <p>中共并不担心制裁，他说，“早在六四后邓小平就说得很清楚，制裁过两天就过去了，经济制裁没有那么了不起。”</p>
 <h2>袁红冰警告：不要指望中共会谈“和平”</h2>
 <p>对于西方媒体很少报导中共是幕后黑手，袁红冰说，“第一，他们对中共还抱着一个绥靖主义的态度。现在拜登政府那些主要官员布林肯，还有国安秘书长，全是过去执行绥靖主义的主要干将。”</p>
-<p>袁红冰说，“他们对中共暴政总是抱着幻想。前几天从布林肯到法国和德国的总理、外长还要求北京来制止俄罗斯侵略。多么可笑，多么愚蠢。”</p>
+<p>袁红冰说，“他们对中共暴政总是抱着幻想。前几天从布林肯到法国和德国的总理、外长还要求北京来制止俄罗斯侵略。多么愚蠢。”</p>
 <p>周二（8日），法国总统马克龙、德国总理朔尔茨与习近平举行了视频峰会，呼吁北京对俄罗斯施加更大的影响力。</p>
 <p>早在在冬奥会中俄就发表了共同声明，袁红冰认为，“这足以说明俄罗斯入侵乌克兰的后盾、幕后支持者就是中共。但是现在美国国务卿布林肯、法国和德国的国家领导人指望中共来参与制裁俄罗斯。这不是与虎谋皮吗？”</p>
 <p>他认为，“我们一定要把这个彻底揭穿。”</p>
-<p>“我判断，再有不到一个月，俄罗斯就结束在乌克兰的军事行动，会达到大部分战略目标。西方媒体现在主要是，一方面可能被乌克兰人英勇抗敌感动了，更多的是被美国、欧洲这些白左政客操纵着。”</p>
+<p>“我判断，再有不到一个月，俄罗斯就结束在乌克兰的军事行动，会达到大部分战略目标。西方媒体现在主要是，一方面可能被乌克兰人英勇抗敌感动了，更多的是被美国、欧洲这些左派政客操纵着。”</p>
 <p>拜登在战前就宣布美国和北约都不会进入乌克兰与俄罗斯作战，袁红冰认为，“客观上起着纵容的作用。而且他们还公开说，已经准备好要在其它国家建立乌克兰流亡政府，照这个判断，乌克兰当局失败已不可避免，只是个时间问题。”</p>
 <p>“在这种情况下，中共暴政绝对不可能撤销他们对俄罗斯的支持，只会强化这种支持。”他说。</p>
 <p>责任编辑：高静#</p>
@@ -61,41 +64,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/10/n13637254.md#1">郝平：俄乌战事相持 中共临五重危机</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/10/n13637750.md#1">【菁英论坛】俄乌战争 重塑冷战后世界格局</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/11/n13638873.md#1">俄乌战火掀零股抢购潮 投资人最青睐四大类ETF</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/11/n13639425.md#1">专家点评：李克强谈俄乌战争避重就轻</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/10/n13637254.md#1">郝平：俄乌战事相持 中共临五重危机</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/10/n13637750.md#1">【菁英论坛】俄乌战争 重塑冷战后世界格局</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/11/n13638873.md#1">俄乌战火掀零股抢购潮 投资人最青睐四大类ETF</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/11/n13639425.md#1">专家点评：李克强谈俄乌战争避重就轻</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/21/n10798292.md#1" target="_blank">共产暴政录：五十年代的肃反运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977767.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(3) 骑向自由</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/29/n9783517.md#1" target="_blank">林辉：刚正不阿包青天  中共歪批其虚伪</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/4/6/n7526736.md#1" target="_blank">绝处逢生 令药学业同行目瞪口呆的神迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/3/n13617717.md#1">【百年真相】惊天大案头目 被江泽民故意放走？</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/2/17/n13585268.md#1">【未解之谜】通灵男孩之一：癌症是“螃蟹”？</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/3/n13617747.md#1">【百年真相】杨开慧29岁早逝 竟与毛有关？</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/6/n13625884.md#1">五行异象 大风吹太和殿大门倒地  史鉴示警</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/6/n13625395.md#1">日本寺庙有300年前人鱼木乃伊 长30公分</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/11/n13639447.md#1">【拍案惊奇】后院起火 普京或愿与乌总统谈判</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/11/n13639936.md#1">【唐瑞讲故事】朗读｜彼得兔的故事（一）</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/11/n13637979.md#1">【未解之谜】掌控战局的神秘之手</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/10/n13635530.md#1">沈舟：俄军遭遇高科技对手 中共傻眼</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/10/n13636238.md#1">【一线采访】上海疫情飙升 民众：情况严重</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/9/n13634247.md#1">栗战书人大报告惹议 学者：突显中共倒行逆施?</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/9/n13634546.md#1">大S再婚震惊娱乐圈 20年未换电话号码成热话</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/10/n13637452.md#1">迪丽热巴进剧组 用红白蓝色蛇皮袋当行李箱</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/9/n13634699.md#1">舆论持续关注铁链女 《窦娥冤》剧演被叫停</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/9/n13633704.md#1">生田斗真为人父 与妻子清野菜名联名报喜</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/10/n13637659.md#1">忧众星挺乌克兰？TVB明珠台再度不播奥斯卡</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/7/n13626962.md#1">早餐天天喝这一杯 改善白发、年轻20岁</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/2/26/n13606611.md#1">肉类是糖尿病根源？改变饮食一个月就逆转</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/9/n13633200.md#1">杏鲍菇酱香入味一诀窍 5分钟脆嫩鲜甜上菜</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/9/n13633895.md#1">73岁帕金森老人疾病逆转！神韵的神奇健康功效</a></li>
-<li><a href="https://github.com/cltpzk3307/djy/blob/master/gb/22/3/10/n13636092.md#1">【健康1+1】内容很吓人？FDA首次公开辉瑞副作用报告</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679009.md#1">【秦鹏直播】为李莹发声险被抓 王圣强：不怕消失</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13679601.md#1">【新闻看点】上海封控混乱 传阳性病例不通报</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cltpzk3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cltpzk3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/11/n13639480.htm">中俄联手反西方制裁？专家揭中共挺俄内幕</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/3/11/n13639480.htm">中俄联手反西方制裁？专家揭中共挺俄内幕</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cltpzk3307/djy/blob/master/gb/22/3/11/n13639480.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cltpzk3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cltpzk3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cltpzk3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cltpzk3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cltpzk3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/22/3/11/n13639480.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
